--- a/index.html
+++ b/index.html
@@ -13,7 +13,40 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div id="form-wrapper">
+            <div id="learn-code">
+                <p>Learn to code by watching others</p>
+                <p>
+                    See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+                    but
+                    understanding how developers think is invaluable.
+                </p>
+            </div>
+            <div id="sbs-form-wrapper">
+                <p class="banner"><span id="try-it-free">Try it free 7 days</span> then $20/mo. thereafter</p>
+                <div id="sbs-form-content">
+                    <form id="sbs-form">
+                        <div class="sbs-section">
+                            <input type="text" id="firstName" name="firstName" placeholder="First Name" required>
+                        </div>
+                        <div class="sbs-section">
+                            <input type="text" id="lastName" name="lastName" placeholder="Last Name" required>
+                        </div>
+                        <div class="sbs-section">
+                            <input type="text" id="email" name="email" placeholder="Email Address" required>
+                        </div>
+                        <div class="sbs-section">
+                            <input type="text" id="password" name="password" placeholder="Password" required>
+                        </div>
+                    </form>
+                    <p id="claim" class="banner">CLAIM YOUR FREE TRIAL</p>
+                    <p id="terms-and-services">By clicking the button, you agree to our <span>Terms and Services</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
